--- a/index.html
+++ b/index.html
@@ -534,16 +534,16 @@
             </p>
             
             <p>
-                In our thesis project, **MandaCare: A Complaint Analysis System for the City Health Department of Mandaluyong City**, I served as both the front-end developer and the machine learning developer. I worked specifically on the system’s automatic complaint categorization and urgency detection using **sentiment analysis**.
+                In our thesis project, MandaCare: A Complaint Analysis System for the City Health Department of Mandaluyong City, I served as both the front-end developer and the machine learning developer. I worked specifically on the system’s automatic complaint categorization and urgency detection using sentiment analysis.
             </p>
 
             <p>
-                I also possess fundamental skills in **Figma prototyping and UI/UX design**, coupled with practical experience in user interface development. Additionally, I completed a Basic AI Workshop under **AI Singapore**, which strengthened my foundational knowledge in artificial intelligence.
+                I also possess fundamental skills in Figma prototyping and UI/UX design, coupled with practical experience in user interface development. Additionally, I completed a Basic AI Workshop under AI Singapore, which strengthened my foundational knowledge in artificial intelligence.
             </p>
             
             <h3>Seeking Opportunities</h3>
             <p>
-                I am actively seeking an internship opportunity where I can further develop my skills in **AI or machine learning, data analytics, front-end development, UI/UX design, or quality assurance** in front-end systems. I am eager to learn, highly adaptable, and committed to contributing to a team that will help me grow in these fields.
+                I am actively seeking an internship opportunity where I can further develop my skills in AI or machine learning, data analytics, front-end development, UI/UX design, or quality assurance in front-end systems. I am eager to learn, highly adaptable, and committed to contributing to a team that will help me grow in these fields.
             </p>
 
             <div class="motto">
@@ -718,4 +718,5 @@
         });
     </script>
 </body>
+
 </html>
